--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,10 +2,10 @@
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 5vh 0;
     font-family: $primary-font;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background: $main-bg-color;
     display: flex;
     flex-direction: column;
