--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -3,7 +3,7 @@
 .nft-card {
     width: min(90%, 350px);
     background: $card-bg-color;
-    margin-inline: auto;
+    margin: 0 auto;
     font-size: rem(18px);
     padding: 1em;
     border-radius: 1em;
